<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2016 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/brick_ask_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone" />

    <org.catrobat.catroid.ui.BrickLayout
        android:id="@+id/brick_set_variable_layout"
        style="@style/BrickContainer.Look.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing">

        <TextView
            android:id="@+id/brick_ask_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_ask_label" />

        <TextView
            android:id="@+id/brick_ask_question_prototype_view"
            style="@style/BrickPrototypeTextView"
            android:layout_width="match_parent"
            android:text="@string/brick_ask_default_question" />

        <TextView
            android:id="@+id/brick_ask_question_edit_text"
            style="@style/BrickEditText"
            android:layout_width="match_parent" />

        <TextView
            android:id="@+id/brick_questionmark"
            style="@style/BrickText.Multiple"
            android:text="@string/brick_ask_question_mark" />

       <TextView
           android:id="@+id/brick_ask_store_label"
           style="@style/BrickText.SingleLine"
           android:text="@string/brick_ask_store"
           app:layout_newLine="true" />

        <Spinner
            android:id="@+id/brick_ask_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            app:layout_newLine="true" />

    </org.catrobat.catroid.ui.BrickLayout>

</LinearLayout>